Gitlet: fixed addfirst/getfirst compilation error